--- a/index.html
+++ b/index.html
@@ -27,45 +27,42 @@
         font-family: "Manrope", sans-serif;
       }
     </style>
+
+    <!-- lg large md medium sm small -->
   </head>
-  <body class="font-manrope">
-    <header class="container mx-auto">
-      <div class="hero">
-        <div class="hero-content flex-col lg:flex-row">
-          <div>
-            <h1 class="text-7xl font-extrabold">
-              Its good <br />tea time at the <br />Tea House
-            </h1>
-            <p class="py-6">
-              Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
-              excepturi exercitationem quasi. In deleniti eaque aut repudiandae
-              et a id nisi.
-            </p>
-            <button class="btn btn-primary bg-lime-700 text-slate-50">
-              Explore More
-            </button>
-          </div>
-          <div>
-            <img
-              src="images/banner.png"
-              class="max-w-sm rounded-lg shadow-2xl"
-            />
-            <div
-              class="flex -mt-20 rounded-lg items-center gap-4 drop-shadow-lg bg-white p-5 w-60"
-            >
-              <div>
-                <i class="fa-solid fa-star text-4xl text-yellow-500"></i>
-              </div>
-              <div>
-                <h3 class="text-3xl">5.00</h3>
-                <p>Trust Pilot Ratings</p>
-              </div>
+  <body class="font-manrope bg-white text-black">
+    <main class="container mx-auto">
+      <section class="px-5 lg:flex py-20 justify-center gap-36 items-center">
+        <div class="flex flex-col space-y-4">
+          <h1 class="text-4xl lg:text-7xl font-extrabold">
+            Its good <br />tea time at the <br />Tea House
+          </h1>
+          <p class="lg:w-[700px]">
+            Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
+            excepturi exercitationem quasi. In deleniti eaque aut repudiandae et
+            a id nisi.
+          </p>
+          <button
+            class="w-fit border-none btn btn-primary hover:bg-orange-500 bg-lime-700 text-slate-50"
+          >
+            Explore More
+          </button>
+        </div>
+        <div>
+          <img src="images/banner.png" class="max-w-sm rounded-lg shadow-2xl" />
+          <div
+            class="flex rounded-lg items-center gap-4 drop-shadow-lg bg-white p-5 w-60 lg:-mt-20"
+          >
+            <div>
+              <i class="fa-solid fa-star text-4xl text-yellow-500"></i>
+            </div>
+            <div>
+              <h3 class="text-3xl">5.00</h3>
+              <p>Trust Pilot Ratings</p>
             </div>
           </div>
         </div>
-      </div>
-    </header>
-    <main class="container mx-auto">
+      </section>
       <!-- feature section -->
       <section class="text-center my-24">
         <h2 class="text-5xl font-extrabold mb-4">Our Featured Products</h2>
@@ -74,58 +71,232 @@
           repudiandae aut nobis iure reiciendis architecto fugit dicta minus?
           Rerum.
         </p>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 pt-2 gap-5">
           <!-- 1st -->
-          <div>
-            <div class="card bg-base-100 w-96 shadow-xl">
-              <figure>
-                <img src="images/tea-1.png" alt="" />
-              </figure>
-              <div class="card-body items-center">
-                <h2 class="card-title">Milk Tea</h2>
-                <p>Creamer could be replaced by fresh milk</p>
-              </div>
+
+          <div class="card shadow-xl">
+            <div class="flex justify-center">
+              <img src="images/tea-1.png" alt="" />
+            </div>
+            <div class="card-body items-center">
+              <h2 class="card-title">Milk Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
             </div>
           </div>
+
           <!-- 2nd -->
-          <div>
-            <div class="card bg-base-100 w-96 shadow-xl">
-              <figure>
-                <img src="images/tea-2.png" alt="" />
-              </figure>
-              <div class="card-body items-center">
-                <h2 class="card-title">Black Tea</h2>
-                <p>Creamer could be replaced by fresh milk</p>
-              </div>
+
+          <div class="card shadow-xl">
+            <div class="flex justify-center">
+              <img src="images/tea-2.png" alt="" />
+            </div>
+            <div class="card-body items-center">
+              <h2 class="card-title">Black Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
             </div>
           </div>
+
           <!-- 3 -->
-          <div>
-            <div class="card bg-base-100 w-96 shadow-xl">
-              <figure>
-                <img src="images/tea-3.png" alt="" />
-              </figure>
-              <div class="card-body items-center">
-                <h2 class="card-title">Lemon Tea</h2>
-                <p>Creamer could be replaced by fresh milk</p>
-              </div>
+
+          <div class="card shadow-xl">
+            <div class="flex justify-center">
+              <img src="images/tea-3.png" alt="" />
+            </div>
+            <div class="card-body items-center">
+              <h2 class="card-title">Lemon Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
             </div>
           </div>
+
           <!-- 4 -->
-          <div>
-            <div class="card bg-base-100 w-96 shadow-xl">
-              <figure>
-                <img src="images/tea-4.png" alt="" />
-              </figure>
-              <div class="card-body items-center">
-                <h2 class="card-title">Green Tea</h2>
-                <p>Creamer could be replaced by fresh milk</p>
-              </div>
+
+          <div class="card shadow-xl">
+            <div class="flex justify-center">
+              <img src="images/tea-4.png" alt="" />
+            </div>
+            <div class="card-body items-center">
+              <h2 class="card-title">Green Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="my-24 flex flex-col md:flex-row space-x-16">
+        <div class="grid grid-cols-1 px-3 lg:grid-cols-2 gap-8 flex-1">
+          <div class="bg-rose-100 h-36">1</div>
+          <div class="row-span-2 bg-lime-100">
+            <img src="images/fresh-1.png" alt="" />
+          </div>
+          <div class="row-span-2 bg-emerald-100">
+            <img src="images/fresh-2.png" alt="" />
+          </div>
+          <div class="bg-emerald-100 h-36">2</div>
+        </div>
+        <div class="flex-1 space-y-6">
+          <h2 class="text-5xl font-extrabold">
+            Great Tea, Freshly <br />
+            Presented
+          </h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea
+            repellendus nam adipisci aliquid necessitatibus, repudiandae ipsam
+            hic laborum corporis non nisi totam sed ut distinctio tempora
+            quibusdam accusantium, cumque aliquam modi. Omnis quibusdam, quod
+            esse praesentium optio delectus repellat itaque ex numquam, dolore
+            mollitia tenetur blanditiis a ullam officiis ea?
+          </p>
+          <h4 class="text-2xl font-extrabold">Unique Taste</h4>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem,
+            corporis?
+          </p>
+          <h4 class="text-2xl font-bold">Premium Quality</h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci,
+            quis.
+          </p>
+        </div>
+      </section>
+
+      <!-- super client section -->
+      <section
+        class="my-24 items-center px-16 py-24 flex flex-col lg:flex-row gap-12 bg-gradient-to-r from-indigo-500 via-purple-500 to-red-500"
+      >
+        <div class="space-y-4">
+          <h2 class="text-2xl md:text-6xl font-extrabold text-white">
+            Meet our Super <br />
+            Clients
+          </h2>
+          <p class="text-white">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+            eligendi expedita fugit voluptas harum, nostrum adipisci! Assumenda
+            porro omnis nam.
+          </p>
+          <button
+            class="px-10 w-fit border-none btn btn-primary hover:bg-orange-500 bg-lime-700 text-slate-50"
+          >
+            Show All
+          </button>
+        </div>
+        <div class="relative">
+          <!-- current review -->
+          <div
+            class="relative opacity-40 mb-15 p-10 z-10 rounded-lg bg-white space-y-3"
+          >
+            <img
+              class="absolute -left-10 -top-6 border-4 border-white rounded-full"
+              src="images/client.png"
+              alt=""
+            />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
+              itaque nobis enim pariatur rerum excepturi eius dolorum quod vitae
+              accusantium.
+            </p>
+            <h4 class="font-bold">Ilham Huda</h4>
+            <p class="font-medium">Buisnessman</p>
+            <div class="flex justify-end">
+              <img src="images/circles.png" alt="" />
+            </div>
+          </div>
+          <!-- previous review 1 -->
+          <div
+            class="absolute p-10 top-40 lg:w-[430px] -left-24 z-20 rounded-lg bg-white space-y-3"
+          >
+            <img
+              class="absolute -left-10 -top-6 border-4 border-white rounded-full"
+              src="images/client.png"
+              alt=""
+            />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
+              itaque nobis enim pariatur rerum excepturi eius dolorum quod vitae
+              accusantium.
+            </p>
+            <h4 class="font-bold">Ilham Huda</h4>
+            <p class="font-medium">Buisnessman</p>
+            <div class="flex justify-end">
+              <img src="images/circles.png" alt="" />
+            </div>
+          </div>
+          <!-- previous review 2 -->
+          <div
+            class="relative opacity-40 mt-16 p-10 rounded-lg z-10 bg-white space-y-3"
+          >
+            <img
+              class="absolute -left-10 -top-6 border-4 border-white rounded-full"
+              src="images/client.png"
+              alt=""
+            />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
+              itaque nobis enim pariatur rerum excepturi eius dolorum quod vitae
+              accusantium.
+            </p>
+            <h4 class="font-bold">Ilham Huda</h4>
+            <p class="font-medium">Buisnessman</p>
+            <div class="flex justify-end">
+              <img src="images/circles.png" alt="" />
             </div>
           </div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="bg-red-50 my-24 items-center px-16 py-24">
+      <nav class="flex justify-between px-16">
+        <div><img src="images/cup.png" alt="" /></div>
+        <div class="flex items-center">
+          <p>Ready to get started?</p>
+          <button
+            class="px-10 w-fit border-none btn btn-primary hover:bg-orange-500 bg-lime-700 text-slate-50"
+          >
+            Get Started
+          </button>
+        </div>
+      </nav>
+      <div class="footer text-black p-10">
+        <nav>
+          <h6 class="text-lg font-bold">Quick Links</h6>
+          <a class="link link-hover">Home</a>
+          <a class="link link-hover">Insurance</a>
+          <a class="link link-hover">About</a>
+          <a class="link link-hover">Privacy Policy</a>
+        </nav>
+        <nav>
+          <h6 class="text-lg font-bold">Our Service</h6>
+          <a class="link link-hover">Insurance</a>
+          <a class="link link-hover">About</a>
+          <a class="link link-hover">Privacy Policy</a>
+          <a class="link link-hover">Press kit</a>
+        </nav>
+        <nav>
+          <h6 class="text-lg font-bold">Help</h6>
+          <a class="link link-hover">Home</a>
+          <a class="link link-hover">Cookie policy</a>
+        </nav>
+        <form class="lg:pl-10">
+          <h6 class="footer-title">Newsletter</h6>
+          <fieldset class="form-control w-80">
+            <label class="label">
+              <span class="label-text">Enter your email address</span>
+            </label>
+            <div class="join">
+              <input
+                type="text"
+                placeholder="username@site.com"
+                class="input input-bordered join-item"
+              />
+              <button class="btn btn-primary join-item">Subscribe</button>
+            </div>
+          </fieldset>
+        </form>
+      </div>
+      <div class="footer footer-center p-4">
+        <p>
+          Copyright © {new Date().getFullYear()} - All right reserved by ACME
+          Industries Ltd
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
